--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-multi-backend": "^9.0.0",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.0.8",
     "zustand": "^5.0.3"
